# img-compress-cli

./: LICENSE  README.md  pyproject.toml
src/img_compress/: main.py  utils.py
tests/: test_compression.py  test_utils.py
